riparrag - mas pruebas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 springdoc.packages-to-scan=com.ipasoft.demo.controllers
 springdoc.api-docs.path=/swagger
 
+#apago el swagger automatico y prendo el yaml + los Bean en SwaggerConfiguration
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.url=/api-docs.yaml
+
 # h2 en memoria
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:ipasoftdb
